The source of the first version of the JRBE system. (0.1 alpha)

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,8 @@
 deploy.ant.properties.file=C:\\Users\\Alexander\\AppData\\Roaming\\NetBeans\\8.0.1\\tomcat80.properties
-j2ee.server.domain=C:/Users/Alexander/AppData/Roaming/NetBeans/8.0.1/apache-tomcat-8.0.9.0_base
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Apache Tomcat 8.0.9
-j2ee.server.instance=tomcat80:home=C:\\Program Files\\Apache Software Foundation\\Apache Tomcat 8.0.9:base=apache-tomcat-8.0.9.0_base
+j2ee.platform.is.jsr109=true
+j2ee.server.domain=C:/Users/Alexander/Documents/wildfly-8.2.1.Final/wildfly-8.2.1.Final/standalone
+j2ee.server.home=C:/Users/Alexander/Documents/wildfly-8.2.1.Final/wildfly-8.2.1.Final
+j2ee.server.instance=wildfly-deployer:localhost:8080#standalone&C:\\Users\\Alexander\\Documents\\wildfly-8.2.1.Final\\wildfly-8.2.1.Final
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
